fix margin whitespace and add more section titles

--- a/styles.sass
+++ b/styles.sass
@@ -79,17 +79,29 @@
         height: 100vh
         display: flex
         align-items: center
+        justify-content: center
+        flex-direction: column
+
         margin-left: 3.33%
         width: 33vw
 
-        p
-            // width: 33vw
-            margin-left: auto
-            background-color: rgba(0,0,0, 0.40)
-            padding: 3rem
-            color: white
-            line-height: 2
-            border-radius: 2.5px
+    h3
+        background-color: rgba(0,0,0, 0.40)
+        width: 100%
+        text-align: center
+        border-radius: 2.5px 2.5px 0px 0px
+        padding-top: 1.5rem
+        font-size: 3vh
+        color: white
+
+    p
+        // width: 33vw
+        margin-left: auto
+        background-color: rgba(0,0,0, 0.40)
+        padding: 3rem
+        color: white
+        line-height: 2
+        border-radius: 2.5px
 
 #buy-a-knife
     background-image: url('assets/Aaron_Diamond_Knives-100.jpg')
@@ -98,17 +110,28 @@
         height: 100vh
         display: flex
         align-items: center
+        flex-direction: column
+        justify-content: center
         margin-right: 3.33%
         width: 100%
 
-        p
-            width: 33vw
-            margin-left: auto
-            background-color: rgba(0,0,0, 0.40)
-            padding: 3rem
-            color: white
-            line-height: 2
-            border-radius: 2.5px
+    h3
+        background-color: rgba(0,0,0, 0.40)
+        width: 100%
+        text-align: center
+        border-radius: 2.5px 2.5px 0px 0px
+        padding-top: 1.5rem
+        font-size: 3vh
+        color: white
+
+    p
+        width: 33vw
+        margin-left: auto
+        background-color: rgba(0,0,0, 0.40)
+        padding: 3rem
+        color: white
+        line-height: 2
+        border-radius: 2.5px
 
 #other-services
     background-image: url('assets/Aaron_Diamond_Knives-012.jpg')
@@ -116,19 +139,29 @@
     div
         height: 100vh
         display: flex
-        align-items: flex-start
+        align-items: center
+        justify-content: center
+        flex-direction: column
         margin-left: 3.33%
-        width: 100%
+        width: 33vw
 
-        p
-            width: 33vw
-            // margin-left: auto
-            background-color: rgba(0,0,0, 0.40)
-            padding: 3rem
-            color: white
-            line-height: 2
-            border-radius: 2.5px
-            margin-top: 3.33%
+    h3
+        background-color: rgba(0,0,0, 0.40)
+        width: 100%
+        text-align: center
+        border-radius: 2.5px 2.5px 0px 0px
+        padding-top: 1.5rem
+        font-size: 3vh
+        color: white
+
+    p
+        // width: 33vw
+        margin-left: auto
+        background-color: rgba(0,0,0, 0.40)
+        padding: 3rem
+        color: white
+        line-height: 3
+        border-radius: 0px 0px 2.5px 2.5px
 
 #header2
     text-align: center
